--- a/awa/config.yaml
+++ b/awa/config.yaml
@@ -1,9 +1,9 @@
 collections:
   awa:
-    archive_paths: !!python/object/apply:os.getenv ["WARC_URL"]
+    archive_paths: WARC_URL
     index:
       type: cdx
-      api_url: !!python/object/apply:eval ["__import__('os').environ['CDX_URL'] + '?url={url}&closest={closest}&sort=closest'"]
+      api_url: CDX_URL?url={url}&closest={closest}&sort=closest
     
       # outbackcdx doesn't serve warc records 
       # so we blank replay_url to force pywb to read the warc file itself
