--- a/awa/config.yaml
+++ b/awa/config.yaml
@@ -8,3 +8,13 @@ collections:
       # outbackcdx doesn't serve warc records 
       # so we blank replay_url to force pywb to read the warc file itself
       replay_url: ""
+  awa-nobanner:
+    enable_banner: false
+    archive_paths: WARC_URL
+    index:
+      type: cdx
+      api_url: CDX_URL?url={url}&closest={closest}&sort=closest
+
+      # outbackcdx doesn't serve warc records
+      # so we blank replay_url to force pywb to read the warc file itself
+      replay_url: ""
