--- a/awa/config.yaml
+++ b/awa/config.yaml
@@ -10,6 +10,7 @@ collections:
       replay_url: ""
   awa-nobanner:
     enable_banner: false
+    framed_replay: false
     archive_paths: WARC_URL
     index:
       type: cdx
