Looks like disabling banner only works in proxy mode so try an empty banner template instead

--- a/awa/config.yaml
+++ b/awa/config.yaml
@@ -9,8 +9,8 @@ collections:
       # so we blank replay_url to force pywb to read the warc file itself
       replay_url: ""
   awa-nobanner:
-    enable_banner: false
     framed_replay: false
+    banner_html: empty.html
     archive_paths: WARC_URL
     index:
       type: cdx
