--- a/awa-nobanner/config.yaml
+++ b/awa-nobanner/config.yaml
@@ -1,12 +1,5 @@
 collections:
   awa-nobanner:
     archive_paths: WARC_URL
-    index:
-      type: cdx
-      api_url: CDX_URL?url={url}&closest={closest}&sort=closest
-
-      # outbackcdx doesn't serve warc records
-      # so we blank replay_url to force pywb to read the warc file itself
-      replay_url: ""
-
+    index: xmlquery+CDX_URL
 framed_replay: false
