--- a/awa/config.yaml
+++ b/awa/config.yaml
@@ -2,5 +2,8 @@ collections:
   awa:
     archive_paths: WARC_URL
     index: xmlquery+CDX_URL
+  a:
+    archive_paths: WARC_URL
+    index: xmlquery+CDX_URL
 
 redirect_to_exact: true
