--- a/awa/config.yaml
+++ b/awa/config.yaml
@@ -3,5 +3,8 @@ collections:
     archive_paths: WARC_URL
     index: cdx+CDX_URL
 
-redirect_to_exact: true
+
+# Disabled as it interferes with path-scoped cookies
+#redirect_to_exact: true
+
 rules_file: rules.yaml
